--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Welcome to Brandon Luong's website!
+description: Feel free to learn about me and follow what I have been working on
