--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,11 @@
 theme: jekyll-theme-cayman
 title: Welcome to Brandon Luong's website!
-description: Feel free to learn about me and follow what I have been working on
+description: Feel free to learn about me and follow what I have been working on...
+baseurl: "/jekyll" # the subpath of your site, e.g. /blog
+url: "/"
+email: bl575@rutgers.edu
+github_username:  bluong2000
+
+
+
+
