--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman
-title: Welcome to Brandon Luong's website!
+title: Welcome to Brandon Luong's website! Here you can learn all about me!
 description: Feel free to learn about me and follow what I have been working on...
 url: "/"
 email: bl575@rutgers.edu
