--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: 
 title: Welcome to Brandon Luong's website! Here you can learn all about me!
 description: Feel free to learn about me and follow what I have been working on...
 url: "/"
