--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme:
 title: Welcome to Brandon Luong's website! Here you can learn all about me!
 description: Feel free to learn about me and follow what I have been working on...
 url: "/"
-email: bl575@rutgers.edu
+email: 2000bluong@gmail.com
 github_username:  bluong2000
 
 
