--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: [Welcome to Brandon Luong's website!]
-description: [Feel free to learn about me and follow what I have been working on...]
+title: [The title of your site]
+description: [A short description of your site's purpose]
 url: "/"
 email: 2000bluong@gmail.com
 github_username:  bluong2000
