--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: [The title of your site]
-description: [A short description of your site's purpose]
+title: [Welcome to my website!]
+description: [Learn more about me!]
 url: "/"
 email: 2000bluong@gmail.com
 github_username:  bluong2000
